more general conv1x1, conv1x1 dense

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -24,38 +15,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "9.273989999999999e-06"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "conv1x1_dense_scheduler = Conv1x1DenseScheduler(128, 1, 64, \"log/conv1x1_dense.log\")\n",
+    "conv1x1_dense_scheduler.n_trial = 50\n",
+    "conv1x1_dense_scheduler.rtol = 1e-5\n",
+    "conv1x1_dense_scheduler.atol = 1e-3\n",
+    "conv1x1_dense_scheduler.autotune(refresh=True)\n",
+    "conv1x1_dense_scheduler.build(display=False)\n",
+    "conv1x1_dense_scheduler.check(runtype=\"pytorch\")\n",
+    "conv1x1_dense_scheduler.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00025236856"
+       "2.348793e-05"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# test conv1x1 gathered scheduler\n",
-    "# conv1x1_gathered_scheduler = Conv1x1GatheredScheduler(512, 4, 128, 2, \"log/conv3x3_gathered.log\")\n",
-    "# conv1x1_gathered_scheduler.n_trial = 50\n",
-    "# conv1x1_gathered_scheduler.rtol = 1e-5\n",
-    "# conv1x1_gathered_scheduler.atol = 1e-3\n",
-    "# conv1x1_gathered_scheduler.autotune(refresh=True)\n",
-    "# conv1x1_gathered_scheduler.build(display=False)\n",
-    "# conv1x1_gathered_scheduler.check(runtype=\"pytorch\")\n",
-    "# conv1x1_gathered_scheduler.evaluate()"
+    "conv1x1_gathered_scheduler = Conv1x1GatheredScheduler(512, 128, 128, 2, \"log/conv1x1_gathered.log\")\n",
+    "conv1x1_gathered_scheduler.n_trial = 50\n",
+    "conv1x1_gathered_scheduler.rtol = 1e-5\n",
+    "conv1x1_gathered_scheduler.atol = 1e-3\n",
+    "conv1x1_gathered_scheduler.autotune(refresh=True)\n",
+    "conv1x1_gathered_scheduler.build(display=False)\n",
+    "conv1x1_gathered_scheduler.check(runtype=\"pytorch\")\n",
+    "conv1x1_gathered_scheduler.evaluate()"
    ]
   },
   {
