accelerate scatter ad

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -146,7 +146,7 @@
     "conv1x1_dense_scheduler.rtol = 1e-5\n",
     "conv1x1_dense_scheduler.atol = 1e-3\n",
     "conv1x1_dense_scheduler.autotune(refresh=True)\n",
-    "conv1x1_dense_scheduler.build(display=True)\n",
+    "conv1x1_dense_scheduler.build(display=False)\n",
     "conv1x1_dense_scheduler.check(runtype=\"pytorch\")\n",
     "conv1x1_dense_scheduler.evaluate()"
    ]
@@ -185,9 +185,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.00018825887000000003"
+       "9.848044e-05"
       ]
      },
      "execution_count": 2,
@@ -197,12 +205,12 @@
    ],
    "source": [
     "# test scatter add\n",
-    "# scatter_add_scheduler = ScatterAddScheduler(64, 512, 128, 2, \"log/scatter_add.log\")\n",
-    "# scatter_add_scheduler.n_trial = 10\n",
-    "# scatter_add_scheduler.autotune(refresh=True)\n",
-    "# scatter_add_scheduler.build(display=False)\n",
-    "# scatter_add_scheduler.check()\n",
-    "# scatter_add_scheduler.evaluate()"
+    "scatter_add_scheduler = ScatterAddScheduler(64, 512, 128, 2, \"log/scatter_add.log\")\n",
+    "scatter_add_scheduler.n_trial = 10\n",
+    "scatter_add_scheduler.autotune(refresh=True)\n",
+    "scatter_add_scheduler.build(display=False)\n",
+    "scatter_add_scheduler.check()\n",
+    "scatter_add_scheduler.evaluate()"
    ]
   },
   {
