support conv dense with different kernel size

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -32,105 +32,13 @@
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python3.8/dist-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n",
-      "/usr/local/lib/python3.8/dist-packages/xgboost/training.py:17: UserWarning: Old style callback is deprecated.  See: https://xgboost.readthedocs.io/en/latest/python/callbacks.html\n",
-      "  warnings.warn(f'Old style callback is deprecated.  See: {link}', UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "@main = primfn(input_1: handle, weight_1: handle, output_1: handle) -> ()\n",
-      "  attr = {\"from_legacy_te_schedule\": True, \"global_symbol\": \"main\", \"tir.noalias\": True}\n",
-      "  buffers = {output: Buffer(output_2: Pointer(float32), float32, [524288], []),\n",
-      "             input: Buffer(input_2: Pointer(float32), float32, [2097152], []),\n",
-      "             weight: Buffer(weight_2: Pointer(float32), float32, [65536], [])}\n",
-      "  buffer_map = {input_1: input, weight_1: weight, output_1: output} {\n",
-      "  attr [IterVar(blockIdx.z: int32, (nullptr), \"ThreadIndex\", \"blockIdx.z\")] \"thread_extent\" = 4;\n",
-      "  allocate(output.local: Pointer(local float32), float32, [128]), storage_scope = local;\n",
-      "  allocate(input.shared: Pointer(shared float32), float32, [2048]), storage_scope = shared;\n",
-      "  allocate(weight.shared: Pointer(shared float32), float32, [4096]), storage_scope = shared;\n",
-      "  allocate(input.shared.local: Pointer(local float32), float32, [32]), storage_scope = local;\n",
-      "  allocate(weight.shared.local: Pointer(local float32), float32, [64]), storage_scope = local;\n",
-      "  attr [IterVar(blockIdx.y: int32, (nullptr), \"ThreadIndex\", \"blockIdx.y\")] \"thread_extent\" = 16;\n",
-      "  attr [IterVar(blockIdx.x: int32, (nullptr), \"ThreadIndex\", \"blockIdx.x\")] \"thread_extent\" = 16;\n",
-      "  attr [IterVar(threadIdx.z: int32, (nullptr), \"ThreadIndex\", \"threadIdx.z\")] \"thread_extent\" = 2;\n",
-      "  attr [IterVar(threadIdx.y: int32, (nullptr), \"ThreadIndex\", \"threadIdx.y\")] \"thread_extent\" = 2;\n",
-      "  attr [IterVar(threadIdx.x: int32, (nullptr), \"ThreadIndex\", \"threadIdx.x\")] \"thread_extent\" = 1 {\n",
-      "    for (f.c.init: int32, 0, 16) {\n",
-      "      for (x.c.init: int32, 0, 4) {\n",
-      "        let cse_var_1: int32 = ((f.c.init*4) + x.c.init)\n",
-      "         {\n",
-      "          output.local_1: Buffer(output.local, float32, [4096], [], scope=\"local\")[cse_var_1] = 0f32\n",
-      "          output.local_1[(cse_var_1 + 64)] = 0f32\n",
-      "        }\n",
-      "      }\n",
-      "    }\n",
-      "    for (rc.outer: int32, 0, 4) {\n",
-      "      attr [IterVar(threadIdx.z_1: int32, (nullptr), \"ThreadIndex\", \"threadIdx.z\")] \"thread_extent\" = 2;\n",
-      "      attr [IterVar(threadIdx.y_1: int32, (nullptr), \"ThreadIndex\", \"threadIdx.y\")] \"thread_extent\" = 2;\n",
-      "      attr [IterVar(threadIdx.x_1: int32, (nullptr), \"ThreadIndex\", \"threadIdx.x\")] \"thread_extent\" = 1;\n",
-      "      for (ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner: int32, 0, 512) {\n",
-      "        input.shared_1: Buffer(input.shared, float32, [2048], [], scope=\"shared\")[(((threadIdx.z_1*1024) + (threadIdx.y_1*512)) + ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner)] = input[((((((((rc.outer*524288) + (threadIdx.z_1*262144)) + (threadIdx.y_1*131072)) + (floordiv(ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner, 16)*4096)) + (blockIdx.y*256)) + (floordiv(floormod(ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner, 16), 4)*64)) + (blockIdx.x*4)) + floormod(ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner, 4))]\n",
-      "      }\n",
-      "      attr [IterVar(threadIdx.z_2: int32, (nullptr), \"ThreadIndex\", \"threadIdx.z\")] \"thread_extent\" = 2;\n",
-      "      attr [IterVar(threadIdx.y_2: int32, (nullptr), \"ThreadIndex\", \"threadIdx.y\")] \"thread_extent\" = 2;\n",
-      "      attr [IterVar(threadIdx.x_2: int32, (nullptr), \"ThreadIndex\", \"threadIdx.x\")] \"thread_extent\" = 1;\n",
-      "      for (ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner_1: int32, 0, 1024) {\n",
-      "        weight.shared_1: Buffer(weight.shared, float32, [4096], [], scope=\"shared\")[(((threadIdx.z_2*2048) + (threadIdx.y_2*1024)) + ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner_1)] = weight[((((((blockIdx.z*16384) + (threadIdx.z_2*8192)) + (threadIdx.y_2*4096)) + (floordiv(ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner_1, 128)*512)) + (rc.outer*128)) + floormod(ax0.ax1.fused.ax2.fused.ax3.fused.inner.inner.inner_1, 128))]\n",
-      "      }\n",
-      "      for (rc.inner.outer: int32, 0, 32) {\n",
-      "        for (ax1: int32, 0, 4) {\n",
-      "          for (ax3: int32, 0, 4) {\n",
-      "            let cse_var_2: int32 = ((ax1*4) + ax3)\n",
-      "             {\n",
-      "              input.shared.local_1: Buffer(input.shared.local, float32, [256], [], scope=\"local\", align=64)[cse_var_2] = input.shared_1[((((rc.inner.outer*64) + (ax1*16)) + (threadIdx.y*4)) + ax3)]\n",
-      "              input.shared.local_1[(cse_var_2 + 16)] = input.shared_1[(((((rc.inner.outer*64) + (ax1*16)) + (threadIdx.y*4)) + ax3) + 8)]\n",
-      "            }\n",
-      "          }\n",
-      "        }\n",
-      "        for (ax0: int32, 0, 16) {\n",
-      "          for (ax1_1: int32, 0, 4) {\n",
-      "            weight.shared.local_1: Buffer(weight.shared.local, float32, [64], [], scope=\"local\")[((ax0*4) + ax1_1)] = weight.shared_1[((((threadIdx.z*2048) + (ax0*128)) + (rc.inner.outer*4)) + ax1_1)]\n",
-      "          }\n",
-      "        }\n",
-      "        for (rc.inner.inner: int32, 0, 4) {\n",
-      "          for (f.c: int32, 0, 16) {\n",
-      "            for (x.c: int32, 0, 4) {\n",
-      "              let cse_var_7: int32 = (f.c*4)\n",
-      "              let cse_var_6: int32 = ((rc.inner.inner*4) + x.c)\n",
-      "              let cse_var_5: int32 = (cse_var_7 + x.c)\n",
-      "              let cse_var_4: int32 = (cse_var_7 + rc.inner.inner)\n",
-      "              let cse_var_3: int32 = (cse_var_5 + 64)\n",
-      "               {\n",
-      "                output.local_1[cse_var_5] = (output.local_1[cse_var_5] + (input.shared.local_1[cse_var_6]*weight.shared.local_1[cse_var_4]))\n",
-      "                output.local_1[cse_var_3] = (output.local_1[cse_var_3] + (input.shared.local_1[(cse_var_6 + 16)]*weight.shared.local_1[cse_var_4]))\n",
-      "              }\n",
-      "            }\n",
-      "          }\n",
-      "        }\n",
-      "      }\n",
-      "    }\n",
-      "    for (f.inner.inner.inner: int32, 0, 16) {\n",
-      "      for (x.inner.inner.inner: int32, 0, 4) {\n",
-      "        let cse_var_8: int32 = ((f.inner.inner.inner*4) + x.inner.inner.inner)\n",
-      "         {\n",
-      "          output[(((((((blockIdx.z*131072) + (threadIdx.z*65536)) + (f.inner.inner.inner*4096)) + (blockIdx.y*256)) + (threadIdx.y*64)) + (blockIdx.x*4)) + x.inner.inner.inner)] = output.local_1[cse_var_8]\n",
-      "          output[((((((((blockIdx.z*131072) + (threadIdx.z*65536)) + (f.inner.inner.inner*4096)) + (blockIdx.y*256)) + (threadIdx.y*64)) + (blockIdx.x*4)) + x.inner.inner.inner) + 128)] = output.local_1[(cse_var_8 + 64)]\n",
-      "        }\n",
-      "      }\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "\n",
-      "\n"
+      "  from pandas import MultiIndex, Int64Index\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.00214707236"
+       "0.00235651856"
       ]
      },
      "execution_count": 2,
@@ -139,16 +47,43 @@
     }
    ],
    "source": [
-    "# test conv1x1 dense scheduler\n",
-    "# very slow on a dense map\n",
-    "conv1x1_dense_scheduler = Conv1x1DenseScheduler(128, 512, 64, \"log/conv1x1_dense.log\")\n",
-    "conv1x1_dense_scheduler.n_trial = 100\n",
-    "conv1x1_dense_scheduler.rtol = 1e-5\n",
-    "conv1x1_dense_scheduler.atol = 1e-3\n",
-    "conv1x1_dense_scheduler.autotune(refresh=True)\n",
-    "conv1x1_dense_scheduler.build(display=False)\n",
-    "conv1x1_dense_scheduler.check(runtype=\"pytorch\")\n",
-    "conv1x1_dense_scheduler.evaluate()"
+    "# test conv dense scheduler\n",
+    "conv_dense_scheduler = ConvDenseScheduler(128, 512, 64, 3, \"log/conv3x3_dense.log\")\n",
+    "conv_dense_scheduler.n_trial = 50\n",
+    "conv_dense_scheduler.rtol = 1e-5\n",
+    "conv_dense_scheduler.atol = 1e-3\n",
+    "conv_dense_scheduler.autotune(refresh=True)\n",
+    "conv_dense_scheduler.build(display=False)\n",
+    "conv_dense_scheduler.check(runtype=\"pytorch\")\n",
+    "conv_dense_scheduler.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00020397229"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test conv dense scheduler\n",
+    "conv_dense_scheduler = ConvDenseScheduler(128, 512, 64, 1, \"log/conv1x1_dense.log\")\n",
+    "conv_dense_scheduler.n_trial = 50\n",
+    "conv_dense_scheduler.rtol = 1e-5\n",
+    "conv_dense_scheduler.atol = 1e-3\n",
+    "conv_dense_scheduler.autotune(refresh=True)\n",
+    "conv_dense_scheduler.build(display=False)\n",
+    "conv_dense_scheduler.check(runtype=\"pytorch\")\n",
+    "conv_dense_scheduler.evaluate()"
    ]
   },
   {
