base block evaluator; tvm block evaluator ; modify accuracy requirements for convs

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -19,7 +19,89 @@
     "sys.path.append(\"..\")\n",
     "import numpy as np\n",
     "\n",
-    "from layers import *"
+    "from layers import *\n",
+    "from blocks import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "maskconv1:   0%|          | 0/7 [00:00<?, ?it/s]/usr/local/lib/python3.8/dist-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n",
+      "scatter_add: 100%|██████████| 7/7 [01:58<00:00, 16.98s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All layers in TVMBlockEvaluator are autotuned.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0024408402700000003"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test tvm block tvaluator\n",
+    "tvm_sparse_block = TVMBlockEvaluator(\"sparse\", 512, 4, 56, 2, 28, 4, n_trial=20)\n",
+    "tvm_sparse_block.setup()\n",
+    "tvm_sparse_block.autotune()\n",
+    "tvm_sparse_block.build()\n",
+    "tvm_sparse_block.evaluate(verbose=True)\n",
+    "tvm_sparse_block.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "conv3: 100%|██████████| 3/3 [00:53<00:00, 17.91s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All layers in TVMBlockEvaluator are autotuned.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.02364724026"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tvm_dense_block = TVMBlockEvaluator(\"dense\", 512, 4, 56, 2, 28, 4, n_trial=20)\n",
+    "tvm_dense_block.setup()\n",
+    "tvm_dense_block.autotune()\n",
+    "tvm_dense_block.build()\n",
+    "tvm_dense_block.evaluate(verbose=True)\n",
+    "tvm_dense_block.evaluate()"
    ]
   },
   {
@@ -166,13 +248,13 @@
    ],
    "source": [
     "# test conv3x3 gathered scheduler\n",
-    "# conv3x3_gathered_scheduler = Conv3x3GatheredScheduler(512, 4, 128, 2, \"log/conv3x3_gathered.log\")\n",
-    "# conv3x3_gathered_scheduler.n_trial = 50\n",
-    "# conv3x3_gathered_scheduler.rtol = 1e-5\n",
-    "# conv3x3_gathered_scheduler.atol = 1e-3\n",
-    "# conv3x3_gathered_scheduler.autotune(refresh=True)\n",
-    "# conv3x3_gathered_scheduler.build(display=False)\n",
-    "# conv3x3_gathered_scheduler.check(runtype=\"pytorch\")\n",
+    "conv3x3_gathered_scheduler = Conv3x3GatheredScheduler(512, 4, 128, 2, \"log/conv3x3_gathered.log\")\n",
+    "conv3x3_gathered_scheduler.n_trial = 50\n",
+    "conv3x3_gathered_scheduler.rtol = 1e-5\n",
+    "conv3x3_gathered_scheduler.atol = 1e-3\n",
+    "conv3x3_gathered_scheduler.autotune(refresh=True)\n",
+    "conv3x3_gathered_scheduler.build(display=False)\n",
+    "conv3x3_gathered_scheduler.check(runtype=\"pytorch\")\n",
     "\n",
     "# sample = conv3x3_gathered_scheduler._generate_sample()\n",
     "# res_tvm = conv3x3_gathered_scheduler._run_tvm(sample)\n",
@@ -182,7 +264,7 @@
     "#         if np.sum(res_tvm[i, j, :] - res_pytorch[i, j, :]) > 1e-2:\n",
     "#             print(i, j)\n",
     "\n",
-    "# conv3x3_gathered_scheduler.evaluate()"
+    "conv3x3_gathered_scheduler.evaluate()"
    ]
   },
   {
@@ -211,12 +293,12 @@
    ],
    "source": [
     "# test gather scheduler\n",
-    "# gather_scheduler = GatherScheduler(64, 512, 128, 2, \"log/gather.log\")\n",
-    "# gather_scheduler.n_trial = 10\n",
-    "# gather_scheduler.autotune(refresh=True)\n",
-    "# gather_scheduler.build(display=False)\n",
-    "# gather_scheduler.check()\n",
-    "# gather_scheduler.evaluate()"
+    "gather_scheduler = GatherScheduler(64, 512, 128, 2, \"log/gather.log\")\n",
+    "gather_scheduler.n_trial = 10\n",
+    "gather_scheduler.autotune(refresh=True)\n",
+    "gather_scheduler.build(display=False)\n",
+    "gather_scheduler.check()\n",
+    "gather_scheduler.evaluate()"
    ]
   },
   {
