search space sampler; more thorough tests

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -18,9 +18,72 @@
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "import numpy as np\n",
+    "import os\n",
+    "from functools import reduce\n",
+    "import json\n",
     "\n",
     "from layers import *\n",
-    "from blocks import *"
+    "from blocks import *\n",
+    "from utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "scatter_add: 100%|██████████| 7/7 [01:30<00:00, 12.95s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All layers in TVMBlockEvaluator are autotuned.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test tvm block evaluator on multiple points\n",
+    "logpath = \"blockResult.json\"\n",
+    "\n",
+    "def run_tvm_block(**kwargs):\n",
+    "    tvm_block = TVMBlockEvaluator(**kwargs, n_trial=100) # faster\n",
+    "    tvm_block.setup()\n",
+    "    tvm_block.autotune()\n",
+    "    tvm_block.build()\n",
+    "    return tvm_block.evaluate(verbose=True)\n",
+    "\n",
+    "sampler = SearchSpaceSampler()\n",
+    "for i in range(10):\n",
+    "    block_setting = sampler.get_block_setting()\n",
+    "    for j in range(3):\n",
+    "        sparsity_setting = sampler.get_sparsity_setting(block_setting)\n",
+    "\n",
+    "        res_sparse = run_tvm_block(mode=\"sparse\", **block_setting, **sparsity_setting)\n",
+    "        res_dense = run_tvm_block(mode=\"dense\", **block_setting, **sparsity_setting)\n",
+    "\n",
+    "        sparse_total = reduce(lambda x, y: x+y, res_sparse.values())\n",
+    "        dense_total = reduce(lambda x, y: x+y, res_dense.values())\n",
+    "\n",
+    "        res_sparse = {k: f\"{v / sparse_total:.4%}\" for k, v in res_sparse.items()}\n",
+    "        res_dense = {k: f\"{v / dense_total:.4%}\" for k, v in res_sparse.items()}\n",
+    "\n",
+    "        record = {\n",
+    "            \"setting\": [*block_setting.values(), *sparsity_setting.values()],\n",
+    "            \"sparse_total\": f\"{sparse_total*1000:.4f}ms\",\n",
+    "            \"dense_total\": f\"{dense_total*1000:.4f}ms\",\n",
+    "            \"sparse_detail\": res_sparse,\n",
+    "            \"dense_detail\": res_dense,\n",
+    "        }\n",
+    "\n",
+    "        with open(logpath, \"a+\") as f:\n",
+    "            f.write(json.dumps(record) + \"\\n\")\n",
+    "        "
    ]
   },
   {
@@ -56,7 +119,7 @@
     }
    ],
    "source": [
-    "# test tvm block tvaluator\n",
+    "# test tvm block evaluator\n",
     "tvm_sparse_block = TVMBlockEvaluator(\"sparse\", 512, 4, 56, 2, 28, 4, n_trial=20)\n",
     "tvm_sparse_block.setup()\n",
     "tvm_sparse_block.autotune()\n",
