Simple API; README

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -29,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "scatter_add: 100%|██████████| 7/7 [01:30<00:00, 12.95s/it]\n"
+      "scatter_add: 100%|██████████| 7/7 [04:56<00:00, 42.41s/it]\n"
      ]
     },
     {
@@ -45,6 +36,40 @@
      "text": [
       "All layers in TVMBlockEvaluator are autotuned.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "conv2:  33%|███▎      | 1/3 [00:25<00:50, 25.34s/it]WARNING:root:Could not find any valid schedule for task Task(func_name=dynconv/conv_dense, args=(464, 464, 114, 114, 3, 3), kwargs={}, workload=('dynconv/conv_dense', 464, 464, 114, 114, 3, 3)). A file containing the errors has been written to /tmp/tvm_tuning_errors_ci1lfvii.log.\n",
+      "conv3: 100%|██████████| 3/3 [01:35<00:00, 31.95s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All layers in TVMBlockEvaluator are autotuned.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:autotvm:Cannot find config for target=cuda -keys=cuda,gpu -arch=sm_70 -max_num_threads=1024 -thread_warp_size=32, workload=('dynconv/conv_dense', 464, 464, 114, 114, 3, 3). A fallback configuration is used, which may bring great performance regression.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "ufunc 'true_divide' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m dense_total \u001b[39m=\u001b[39m reduce(\u001b[39mlambda\u001b[39;00m x, y: x\u001b[39m+\u001b[39my, res_dense\u001b[39m.\u001b[39mvalues())\n\u001b[1;32m     23\u001b[0m res_sparse \u001b[39m=\u001b[39m {k: \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mv \u001b[39m/\u001b[39m sparse_total\u001b[39m:\u001b[39;00m\u001b[39m.4%\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m res_sparse\u001b[39m.\u001b[39mitems()}\n\u001b[0;32m---> 24\u001b[0m res_dense \u001b[39m=\u001b[39m {k: \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mv \u001b[39m/\u001b[39m dense_total\u001b[39m:\u001b[39;00m\u001b[39m.4%\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m res_sparse\u001b[39m.\u001b[39mitems()}\n\u001b[1;32m     26\u001b[0m record \u001b[39m=\u001b[39m {\n\u001b[1;32m     27\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39msetting\u001b[39m\u001b[39m\"\u001b[39m: [\u001b[39m*\u001b[39mblock_setting\u001b[39m.\u001b[39mvalues(), \u001b[39m*\u001b[39msparsity_setting\u001b[39m.\u001b[39mvalues()],\n\u001b[1;32m     28\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39msparse_total\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msparse_total\u001b[39m*\u001b[39m\u001b[39m1000\u001b[39m\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39mms\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mdense_detail\u001b[39m\u001b[39m\"\u001b[39m: res_dense,\n\u001b[1;32m     32\u001b[0m }\n\u001b[1;32m     34\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(logpath, \u001b[39m\"\u001b[39m\u001b[39ma+\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     21\u001b[0m dense_total \u001b[39m=\u001b[39m reduce(\u001b[39mlambda\u001b[39;00m x, y: x\u001b[39m+\u001b[39my, res_dense\u001b[39m.\u001b[39mvalues())\n\u001b[1;32m     23\u001b[0m res_sparse \u001b[39m=\u001b[39m {k: \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mv \u001b[39m/\u001b[39m sparse_total\u001b[39m:\u001b[39;00m\u001b[39m.4%\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m res_sparse\u001b[39m.\u001b[39mitems()}\n\u001b[0;32m---> 24\u001b[0m res_dense \u001b[39m=\u001b[39m {k: \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mv \u001b[39m/\u001b[39m dense_total\u001b[39m:\u001b[39;00m\u001b[39m.4%\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m res_sparse\u001b[39m.\u001b[39mitems()}\n\u001b[1;32m     26\u001b[0m record \u001b[39m=\u001b[39m {\n\u001b[1;32m     27\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39msetting\u001b[39m\u001b[39m\"\u001b[39m: [\u001b[39m*\u001b[39mblock_setting\u001b[39m.\u001b[39mvalues(), \u001b[39m*\u001b[39msparsity_setting\u001b[39m.\u001b[39mvalues()],\n\u001b[1;32m     28\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39msparse_total\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msparse_total\u001b[39m*\u001b[39m\u001b[39m1000\u001b[39m\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39mms\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mdense_detail\u001b[39m\u001b[39m\"\u001b[39m: res_dense,\n\u001b[1;32m     32\u001b[0m }\n\u001b[1;32m     34\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(logpath, \u001b[39m\"\u001b[39m\u001b[39ma+\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "\u001b[0;31mTypeError\u001b[0m: ufunc 'true_divide' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
+     ]
     }
    ],
    "source": [
@@ -52,7 +77,7 @@
     "logpath = \"blockResult.json\"\n",
     "\n",
     "def run_tvm_block(**kwargs):\n",
-    "    tvm_block = TVMBlockEvaluator(**kwargs, n_trial=100) # faster\n",
+    "    tvm_block = TVMBlockEvaluator(**kwargs, n_trial=50) # 100 takes about 15min\n",
     "    tvm_block.setup()\n",
     "    tvm_block.autotune()\n",
     "    tvm_block.build()\n",
@@ -71,7 +96,7 @@
     "        dense_total = reduce(lambda x, y: x+y, res_dense.values())\n",
     "\n",
     "        res_sparse = {k: f\"{v / sparse_total:.4%}\" for k, v in res_sparse.items()}\n",
-    "        res_dense = {k: f\"{v / dense_total:.4%}\" for k, v in res_sparse.items()}\n",
+    "        res_dense = {k: f\"{v / dense_total:.4%}\" for k, v in res_dense.items()}\n",
     "\n",
     "        record = {\n",
     "            \"setting\": [*block_setting.values(), *sparsity_setting.values()],\n",
